--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Usuarios</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -15,10 +15,10 @@
     <thead>
         <tr><th>Nombre Completo</th><th>Rol</th><th>Proyecto</th></tr>
     </thead>
-    <tbody class="rowlink" data-link = "row" data-target="Index">
+    <tbody>
         @for (int i = 0; i < Model.listaUsuarios.Count; i++)
         {
-            <tr>
+            <tr onclick="gotoDetails()">
                 <td>
                     @Html.DisplayFor(modelItem => Model.listaUsuarios.ElementAt(i).nombre)
                     @Html.DisplayFor(modelItem => Model.listaUsuarios.ElementAt(i).apellidos)
@@ -28,10 +28,24 @@
                     @Html.Raw(" ")
                 </td>
                 <td>
-                    @Html.Raw(" ")
+                    @for (int j = 0; j < Model.listaProyectos.Count; j++)
+                    {
+                        if (Model.listaUsuarios.ElementAt(i).cedula.Equals(Model.listaProyectos.ElementAt(j).Usuario.cedula))
+                        {
+                            @Html.DisplayFor(modelItem => Model.listaProyectos.ElementAt(j).nombre)
+                            @Html.Raw(" ")
+                        }
+                    }
                 </td>
             </tr>
         }
     </tbody>
 
 </table>
+
+<script type="text/javascript">
+    function gotoDetails()
+    {
+        window.location.replace("Index");
+    }
+</script>
