ordenamiento en usuarios por apellido

--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -43,9 +43,6 @@
 
 </table>
 
-<script type="text/javascript">
-    function gotoDetails()
-    {
-        window.location.replace("Index");
-    }
-</script>
+<script src="../../Scripts/jquery_Usuarios.js"></script>
+
+//ApplicationUser.ROles.first
