--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -11,9 +11,26 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
+@using (Html.BeginForm())
+{
+    <p>
+        Buscar por nombre: @Html.TextBox("SearchString")
+        <input type="submit" value="Buscar" />
+    </p>
+}
+
+
 <table class="table table-striped table-bordered table-hover">
     <thead>
-        <tr><th>Nombre Completo</th><th>Rol</th><th>Proyecto</th></tr>
+        <tr>
+            <th>
+                @Html.ActionLink("Nombre Completo", "Index", new { sortOrder = ViewBag.NameSortParm })
+            </th>
+            <th>Rol</th>
+            <th>
+                @Html.ActionLink("Proyecto", "Index", new { sortOrder = ViewBag.DateSortParm })
+            </th>
+        </tr>
     </thead>
     <tbody>
         @for (int i = 0; i < Model.listaUsuarios.Count; i++)
