Editar v1 sin finalizar

--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -53,6 +53,9 @@
                             @Html.Raw(" ")
                         }
                     }
+                <td>
+                    @Html.ActionLink("Detalles", "Detalles", new { id =Model.listaUsuarios.ElementAt(i).cedula})
+                </td>
                 </td>
             </tr>
         }
