--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -1,113 +1,184 @@
-﻿@model ProyectoInge1.Models.ModUsuarioInter
+﻿
+@model ProyectoInge1.Models.ModUsuarioInter
+<script>
+    function esconderEditar() {
+        $('.elementoEditar').hide();
+        $('.elementoModificar').show();
+
+    }
+    function cancelar() {
+        $('.elementoEditar').show();
+        $('.elementoModificar').hide();
+
+    }
+</script>
 @{
     ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Detalles</h2>
-
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 <div>
     <h4>Detalles de Usuario</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <input type="button" value="Editar" onclick="Editar()">
-        <input type="button" value="Eliminar" onclick="Eliminar()">
-        <div>
-            <dt>
-                Nombre
-            </dt>
+    <div class="elementoModificar" style="display:none">
+        <dl class="dl-horizontal">
+            <div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloUsuario.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloUsuario.nombre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                <textarea name="message" rows="1" cols="30">
-                    @Html.DisplayFor(model => model.modeloUsuario.nombre)
-                </textarea>
-            </dd>
 
-            <dt>
-                Apellido
-            </dt>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloUsuario.apellidos, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloUsuario.apellidos, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                <textarea name="message" rows="1" cols="30">
-                    @Html.DisplayFor(model => model.modeloUsuario.apellidos)
-                </textarea>
-            </dd>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dt>
-                Cedula
-            </dt>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloUsuario.correo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloUsuario.correo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloUsuario.correo, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                <textarea name="message" rows="1" cols="30">
-                    @Html.DisplayFor(model => model.modeloUsuario.cedula)
-                </textarea>
-            </dd>
 
-            <dt>
-                Telefono
-            </dt>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloTelefono1.numero, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloUsuario.Telefono, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                <textarea name="message" rows="1" cols="30">
-                    89080981
-                </textarea>
-            </dd>
 
-            <dt>
-                Rol
-            </dt>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloTelefono2.numero, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                <select>
-                    <option value="admin">rol 1</option>
-                    <option value="usser">rol 2</option>
-                    <option value="desarr">rol 3</option>
-                    <option value="lider">rol 4</option>
-                </select>
-            </dd>
-        </div>
-        <div id="nCuenta" style="display:none;">
-            <dt>
-                Nombre
-            </dt>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.modeloProyecto.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-            <dd>
-                @Html.DisplayFor(model => model.modeloUsuario.nombre)
-            </dd>
 
-            <dt>
-                Apellido
-            </dt>
+                <dt>
+                    Rol
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.modeloUsuario.apellidos)
-            </dd>
-
-            <dt>
-                Cedula
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.modeloUsuario.cedula)
-            </dd>
-
-            <dt>
-                Telefono
-            </dt>
-
-            <dd>
-                89080981
-            </dd>
-
-            <dt>
-                Rol
-            </dt>
-
-            <dd>
-                rol 4
-            </dd>
-        </div>
-    </dl>
+                <dd>
+                    <select>
+                        <option value="admin">rol 1</option>
+                        <option value="usser">rol 2</option>
+                        <option value="desarr">rol 3</option>
+                        <option value="lider">rol 4</option>
+                    </select>
+                </dd>
+                <div class="form-group">                    
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Aceptar" class="btn btn-default" />
+                        <a class="btn btn-default" onclick="cancelar()">Cancelar</a>
+                    </div>
+                </div>
+            </div>
+            </dl>
+    </div>
 </div>
+        <div class="elementoEditar">
+            <a class="btn btn-default" onclick="esconderEditar()">Modificar</a>
+            <dl class="dl-horizontal">
+
+                <div>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.modeloUsuario.nombre)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.modeloUsuario.nombre)
+                    </dd>
+                </div>
+
+                <div>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.modeloUsuario.apellidos)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.modeloUsuario.apellidos)
+                    </dd>
+                </div>
+                <div>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.modeloUsuario.nombre)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.modeloUsuario.cedula)
+                    </dd>
+                </div>
+
+                <div>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.modeloUsuario.correo)
+                    </dt>
+
+                    <dd>
+                        89080981
+                    </dd>
+                </div>
+                <div>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.modeloTelefono1.numero)
+                    </dt>
+
+                    <dd>
+                        89080981
+                    </dd>
+                </div>
+
+                <div>
+                    <dt>
+                        Rol
+                    </dt>
+
+                    <dd>
+                        rol 4
+                    </dd>
+                </div>
+            </dl>
+</div>
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
 <p>
 </p>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
