Spans en español

--- a/ProyectoInge1/ProyectoInge1/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Se ha enviado su correo para realizar el cambio de contraseña.
     </p>
 </div>
 	
