--- a/ProyectoInge1/ProyectoInge1/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Confirmacion de cambio de contraseña";
 }
 
 <hgroup class="title">
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Su contraseña ha sido actualizada. Por favor, @Html.ActionLink("presione aquí para iniciar sesión", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
