--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -59,6 +59,7 @@
                             @Html.Raw(" ")
                         }
                     }
+                    @Html.ActionLink("Detalles", "Detalles", new { id = Model.listaUsuarios.ElementAt(i).cedula })
                 </td>
             </tr>
         }
