--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Eliminar.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Eliminar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProyectoInge1.Models.ModUsuarioInter
 <script>
     function Cancelar() {
-        window.location.replace('../Usuarios/Index')
+        window.location.replace('../../Usuarios/Index')
     }
 </script>
 @{
