--- a/ProyectoInge1/ProyectoInge1/Views/Account/Login.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use una cuenta de la aplicacion para iniciar sesion.</h4>
+                <h4>Accede al sistema para continuar.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,23 +38,26 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <button type="submit" class="btn btn-primary">Log in</button>
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Registrar nuevo usuario", "Register")
-                </p>
-                <p>
                     @Html.ActionLink("Olvido su contraseña?", "ForgotPassword")
                 </p>
+                @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
             }
         </section>
     </div>
+    <!--
     <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
+        -->
 </div>
 
 @section Scripts {
