--- a/ProyectoInge1/ProyectoInge1/Views/Home/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Home/Index.cshtml
@@ -3,12 +3,15 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Introduccion para el proyecto</h1>
+    <p class="lead">El propósito general de este proyecto consiste en implementar un Sistema de Administración de
+Requerimientos que permita administrar los requerimientos funcionales de un proyecto de desarrollo de
+software durante su ciclo de vida, y de esta manera implementar el área clave de Administración de
+Requerimientos del Modelo de Capacidad Madurez (CMMI).</p>
 </div>
 
 <div class="row">
+    <!--
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
@@ -27,5 +30,5 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    </div>-->
 </div>
