Control de Proyectos 1.0

--- a/ProyectoInge1/ProyectoInge1/Views/Account/ConfirmEmail.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ConfirmEmail.cshtml
@@ -9,7 +9,7 @@
         
         Por favor,
         <div class="btn btn-default">
-        @Html.ActionLink("presione aquí para iniciar sesión", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        @Html.ActionLink("Presione aquí para iniciar sesión", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
         </div>
     </p>
 </div>
