--- a/ProyectoInge1/ProyectoInge1/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Confirmacion de Cambio de contraseña";
 }
 
 <hgroup class="title">
