--- a/ProyectoInge1/ProyectoInge1/Views/Account/ResetPassword.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProyectoInge1.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Cambio de Contraseña";
 }
 
 <h2>@ViewBag.Title.</h2>
