--- a/ProyectoInge1/ProyectoInge1/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ProyectoInge1.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registro";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>Associate your @ViewBag.LoginProvider account.</h3>
+<h3>Asocie su cuenta @ViewBag.LoginProvider.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
