--- a/ProyectoInge1/ProyectoInge1/Views/Account/Login.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ProyectoInge1.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Inicio de Sesión";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -38,16 +38,13 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-primary">Log in</button>
+                        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                     </div>
                 </div>
                 <p>
                     @Html.ActionLink("Olvido su contraseña?", "ForgotPassword")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+
             }
         </section>
     </div>
