--- a/ProyectoInge1/ProyectoInge1/Views/Roles/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Roles/Index.cshtml
@@ -45,7 +45,7 @@
         }
     </table>
     <div>
-        <input type="submit" class="btn btn-success" value="Guardar Cambios" />
+        <input type="submit" class="btn btn-success" value="Aceptar" />
         <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-default">Cancelar</a>
     </div>
 }
