--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
@@ -59,21 +59,27 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Rol</label>
+            <label class="control-label col-md-2">Rol:</label>
             <div class="col-md-10" style="padding-top:0.5em;">
-                @Html.DropDownListFor(model => model.Role, new[] { new SelectListItem() {Text = "Administrador", Value = "2"}, new SelectListItem() { Text = "Desarrollador", Value = "1" } ,new SelectListItem() {Text = "Usuario", Value = "3"} }, "-- Rol no asignado --")
+                @Html.DropDownListFor(model => model.Role,
+               new[] { new SelectListItem() { Text = "Administrador", Value = "1" },
+               new SelectListItem() { Text = "Desarrollador", Value = "2" },
+               new SelectListItem() { Text = "Usuario", Value = "3" } }, new { @class = "form-control" }) 
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-5">
+                <input type="submit" value="Aceptar" class="btn btn-primary" />
+                <div class="btn btn-danger" style="color:white;" />
+                @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
+            </div>
+            </div>
+            <div class="col-md-offset-2 col-md-5">
+                
             </div>
         </div>
-    </div>
 }
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
