--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -25,7 +25,7 @@
     <h4>Detalles de Usuario</h4>
     <hr />
     <div class="elementoModificar" style="display:none">
-        <dl class="dl-horizontal">
+        <div class="dl-horizontal">
             <div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -33,33 +33,31 @@
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.nombre, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.nombre, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-
+                    </div><br/>
+                </div><br/>
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloUsuario.apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.apellidos, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.apellidos, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloUsuario.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloUsuario.correo, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.correo, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.correo, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
 
                 <div class="form-group">
@@ -67,8 +65,8 @@
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.Telefono, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
 
                 <div class="form-group">
@@ -76,30 +74,30 @@
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloProyecto.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloProyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloProyecto.nombre, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloUsuario.id, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.id, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.id, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
                 <div class="form-group">
                     @Html.LabelFor(model => model.modeloUsuario.lider, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.modeloUsuario.lider, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.modeloUsuario.lider, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                    </div><br/>
+                </div><br/>
 
                 <dt>
                     Rol
@@ -107,25 +105,25 @@
 
                 <dd>
                     <select>
-                        <option value="admin">rol 1</option>
-                        <option value="usser">rol 2</option>
-                        <option value="desarr">rol 3</option>
-                        <option value="lider">rol 4</option>
+                        <option value="1">Administrador</option>
+                        <option value="2">Desarrollador</option>
+                        <option value="3">Usuario</option>
                     </select>
                 </dd>
                 <div class="form-group">                    
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Aceptar" class="btn btn-default" />
-                        <a class="btn btn-default" onclick="cancelar()">Cancelar</a>
+                        <input type="submit" value="Aceptar" class="btn btn-primary" />
+                        <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
                     </div>
                 </div>
             </div>
-            </dl>
+            </div>
     </div>
 </div>
         <div class="elementoEditar">
-            <a class="btn btn-default" onclick="esconderEditar()">Modificar</a>
-            <dl class="dl-horizontal">
+
+            <a class="btn btn-primary" onclick="esconderEditar()">Modificar</a>
+            <div class="dl-horizontal">
 
                 <div>
                     <dt>
@@ -183,11 +181,8 @@
                         rol 4
                     </dd>
                 </div>
-            </dl>
-</div>
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+            </div>
+    </div>
 <p>
 </p>
 }
