--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -7,8 +7,7 @@
 
     }
     function cancelar() {
-        $('.elementoEditar').show();
-        $('.elementoModificar').hide();
+        window.location.replace('../Index')
 
     }
     function borrar(element) {
