--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Eliminar.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Eliminar.cshtml
@@ -8,15 +8,20 @@
     ViewBag.Title = "Eliminar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 <h2>Eliminar</h2>
 <div> <dt>Esta Seguro que desea borrar a:</dt></div>
 <div> <dt>Nombre:</dt></div>
 @Html.DisplayFor(model => model.modeloUsuario.nombre)
 <div> <dt>Apellido:</dt></div>
 @Html.DisplayFor(model => model.modeloUsuario.apellidos)
-<div> <dt>Cedula:</dt></div>
-@Html.DisplayFor(model => model.modeloUsuario.cedula)
+    <div class="form-group"style="display:none">
+        <dt>Cedula </dt>
+        @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
+    </div>
 
 
 <div class="form-group">
@@ -26,3 +31,4 @@
     </div>
 
 </div>
+}
