versión actualizada revisión 1er Sprint

--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -56,8 +56,8 @@
                 <td>
                     @{  var id = item.id;
                         var userManager = Request.GetOwinContext().GetUserManager<ApplicationUserManager>();
-                        //var userRoles = userManager.GetRoles(id);
-                        //var role = userRoles[0];  @Html.DisplayFor(modelItem => role)
+                        var userRoles = userManager.GetRoles(id);
+                        var role = userRoles[0];  @Html.DisplayFor(modelItem => role)
                     }                
                 </td>
                 <td>@{ if (item.Proyecto.Count != 0) {
