--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Index.cshtml
@@ -24,7 +24,10 @@
                 Buscar por nombre: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
                 <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
-            <div class="col-lg-2 col-lg-push-6">
+            <div class="col-lg-1 col-lg-pull-1">
+                <a class="btn btn-info" href="../Usuarios">Mostrar Todos</a>
+            </div>
+            <div class="col-lg-2 col-lg-push-5">
                 <a class="btn btn-success" href="Usuarios/Create">Crear</a>
             </div>
         </div>
@@ -38,9 +41,9 @@
             <th>
                 @Html.ActionLink("Nombre Completo", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
-            <th>Rol</th>
+            <th>@Html.ActionLink("Rol", "Index", new { sortOrder = ViewBag.RolSortParm, currentFilter = ViewBag.CurrentFilter })</th>
             <th>
-                @Html.ActionLink("Proyecto", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
+                @Html.ActionLink("Proyecto", "Index", new { sortOrder = ViewBag.ProySortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
         </tr>
     </thead>
